ajustando desativação em cascata de usuário, estoque e produto